src/test/compile-fail/import-glob-path.rs
// error-pattern:expecting
import foo::*::bar